[package]
name = "leaf-examples"
description = "Examples for the Machine Learning Framework 'Leaf'"
version = "0.1.0"
authors = ["Michael Hirn <mj@autumnai.com>",
           "Maximilian Goisser <max@autumnai.com>"]

[dependencies]
# cuticula = "0.1.4"
leaf = { git = "https://github.com/alexandermorozov/leaf", default-features = false }
collenchyma = { git = "https://github.com/alexandermorozov/collenchyma", default-features = false }

csv = "0.14"
hyper = { version = "0.7", default-features = false }

log = "0.3"
env_logger = "0.3"

# CLI tooling
docopt = "0.6.75"
rustc-serialize = "0.3"

clippy = { version = "0.0.23", optional = true }

[features]
default = ["native", "opencl", "cuda"]
native = ["leaf/native", "collenchyma/native"]
opencl = ["leaf/opencl", "collenchyma/opencl"]
cuda = ["leaf/cuda", "collenchyma/cuda"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2
